--- a/sources/sections/05-voting.adoc
+++ b/sources/sections/05-voting.adoc
@@ -48,7 +48,7 @@ Many votes usually occur in the Opening or Closing TC Plenary. The following is 
 [[Table-1]]
 .Vote types and allowed voters
 [cols=",",]
-|==================================================================================
+|===
 |Vote Type |Who can Vote
 |Approval of a White Paper, Discussion Paper, or Engineering Report|Any member
 |Election of TC reps to the PC|Any member
@@ -59,7 +59,7 @@ Many votes usually occur in the Opening or Closing TC Plenary. The following is 
 |Approval to start electronic vote for a revision of an OGC standard|TC Voting Member
 |Approval to start electronic vote for a new TC P&P or other policy document|TC Voting Member
 |Approval to start electronic vote for a new SWG or Community standard work activity|TC Voting Member
-|==================================================================================
+|===
 
 For "`Any Member`" votes, only one member representative from a given Member Organization may vote.
 
@@ -92,7 +92,7 @@ ____
 
 Not every OGC TC Voting member can attend every TC Closing Plenary. Therefore, the OGC maintains a proxy process. The official TC Voting representative for an organization can assign their proxy to another full-time employee of their organization, to another individual from another TC Member voting organization, or to the TCC.
 
-Proxies can be assigned electronically or in written form. The written proxy form is provided for each meeting and are sent to the Voting members via email as well as being posted to the TC meeting folder for which the proxy will be valid. Assignment of proxy to another full-time employee of the Voting member’s organization may be communicated verbally to the TCC in advance of or at the TC Closing Plenary.
+Proxies can be assigned electronically or in written form. The written proxy form is provided for each meeting and are sent to the Voting members via email as well as being posted to the TC meeting folder for which the proxy will be valid. Assignment of proxy to another full-time employee of the Voting member's organization may be communicated verbally to the TCC in advance of or at the TC Closing Plenary.
 
 Proxy shall be communicated to the TCC in advance of the TC Closing Plenary. The TCC shall send reminders to the Voting Members prior to the meetings.
 
@@ -212,7 +212,7 @@ The procedures for holding electronic votes (e-votes) presented in this section 
 In the event that a motion is made either on the email reflector of a subgroup or in some other scheduled meeting of the subgroup (that lacks quorum and thus cannot act directly), then the chair (or presiding officer of the meeting if the elected chair is not present) may call for a Portal vote as a "`measures to obtain a quorum`" (<<RONR,section=40,pages="347-348">>). The procedure will be as follows.
 
 1.  A motion is made and seconded on the subgroup's email reflector or during a meeting (such as a teleconference) that may not have a quorum.[multiblock footnote omitted]
-2.  The chair (or the presiding person at the meeting where the motion was made in conjunction with one of the subgroup’s elected chairs) announces that a Portal e-vote will be taken and summarizes the procedure to be used. This summary includes an opening date (usually immediately or within one week after the motion is made) and a closing date at least one full week after the opening, making the vote last at least 8 calendar days (such as a Monday to Monday schedule).
+2.  The chair (or the presiding person at the meeting where the motion was made in conjunction with one of the subgroup's elected chairs) announces that a Portal e-vote will be taken and summarizes the procedure to be used. This summary includes an opening date (usually immediately or within one week after the motion is made) and a closing date at least one full week after the opening, making the vote last at least 8 calendar days (such as a Monday to Monday schedule).
 3.  All requirements for previous announcements as delineated in the TC policy and procedures must be met before the email or Portal vote start date. These requirements may include posting of the associated supporting documents in advance of the vote and/or an official notice to the TC of a pending vote within the subgroup.
 4.  Votes must be cast before the end of the closing day at midnight in the time zone of the voter (as recorded by the email send protocol). This mail announcing the vote shall include a formal name for the vote in the subject field.
 5.  Any valid voting member of the subgroup may visit the Portal page for the e-vote and cast their vote. The member may change their vote at any time. The last vote cast by the member before the closing date and time is his official vote. Portal votes do not stop until their end date is reached or the vote organizer chooses to withdraw the vote.
@@ -233,6 +233,6 @@ Email votes follow the same process as laid out for TC votes in the TC Meeting (
 
 . The TCC or subgroup chair sends an email to the appropriate reflector notifying the group of the start of an email vote. The message must specify the item(s) on which the group is voting, include relevant background information, provide the deadline for voting, and define the type of vote ("`Hand`" or "`No Objection`").
 
-. [[tc-hand-vote]] "`Hand`" vote: voting members email the reflector (from the email address listed for the corresponding Portal user) with the vote clearly mentioned in the first few lines of the mail, and optionally in the subject line. Allowed votes are YES, NO, or ABSTAIN. The subject line should include the formal name of the subject of the vote used by the chair in the announcement. A member may change their vote by emailing again at any time before the close of the vote. The last vote cast by the member before the closing date and time is that member’s official vote.
+. [[tc-hand-vote]] "`Hand`" vote: voting members email the reflector (from the email address listed for the corresponding Portal user) with the vote clearly mentioned in the first few lines of the mail, and optionally in the subject line. Allowed votes are YES, NO, or ABSTAIN. The subject line should include the formal name of the subject of the vote used by the chair in the announcement. A member may change their vote by emailing again at any time before the close of the vote. The last vote cast by the member before the closing date and time is that member's official vote.
 
 . "`No Objection`" vote: an email vote may consist of a request to the group members for any objection to unanimous consent. Voters with no objection to the ballot do not need to email the chair or reply to the vote announcement. Should there be an objection, the vote will be paused and the objection discussed in the reflector or in a meeting. If the objection is addressed to the satisfaction of the objecting party, the vote will continue for the number of days remaining in the vote from the date at which the vote was paused. If the objection is not removed, then the vote will restart as either a "`Hand`" vote (see <<tc-hand-vote>>) or a Portal e-vote.
